# disgrace

./: .cproject  .project  CMakeLists.txt  README.md  TODO  TODO.md
disgrace/src/: main.cpp
src/: Dataset.h  Disgrace.cpp  Disgrace.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Utils.cpp  Utils.h  icons.qrc  main.cpp  xmgrace_parser.py
src/AgrObjects/: AgrDefaults.cpp  AgrDefaults.h  AgrDrawingObject.cpp  AgrDrawingObject.h  AgrFile.cpp  AgrFile.h  AgrGraph.cpp  AgrGraph.h  AgrOption.cpp  AgrOption.h  AgrRegion.cpp  AgrRegion.h  AgrSet.cpp  AgrSet.h  AgrSettings.cpp  AgrSettings.h  Dataset.cpp  Dataset.h  SettingsMap.cpp  SettingsMap.h
src/AgrParser/: AgrDrawingObject.cpp  AgrDrawingObject.h  AgrFile.cpp  AgrFile.h  AgrGraph.cpp  AgrGraph.h  AgrRegion.cpp  AgrRegion.h
src/Commands/: Axis.cpp  Axis.h  Legend.cpp  Legend.h  Set.cpp  Set.h  defs.h
src/Data/: DataManager.cpp  DataManager.h  Dataset.cpp  Dataset.h  DatasetFactory.cpp  DatasetFactory.h
src/Dialogs/: ImportDataset.cpp  ImportDataset.h  ImportDataset.ui  SetAppearance.cpp  SetAppearance.h  SetAppearance.ui
src/images/icons/: disgrace_icon.xcf
